welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:28: error: not found: value faireLigne
    faireLigne() ; gauche() ; avance(); avance(); avance(); avance(); avance(); droite()
    ^